--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,12 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
+New:
+* Bug fixes.
+* New `--debug' flag to turn on shell script tracing for libtool,
+  libtoolize, and ltconfig.
+* Changed `libtool --features' to print out all configuration variables.
+* Support for *-*-hpux11*.
+
 New in 1.2 - 1998-03-20, Gordon Matzigkeit:
 * Minor bug fixes to provide a stable public release.
 * Libtool no longer causes Solaris printf to barf due to silly
