--- a/tests/ChangeLog
+++ b/tests/ChangeLog
@@ -1,3 +1,7 @@
+1998-04-14  Gordon Matzigkeit  <gord@profitpress.com>
+
+	* quote.test (echo): Update the echo test from ../ltconfig.in.
+
 1998-03-08  Gordon Matzigkeit  <gord@profitpress.com>
 
 	* tlibtool: Eliminate from distribution.
